public static class ConstParams
{
    #region ANIMATIONS
    public const string ANIM_TRIGGER_RUN = "Running";
    public const string ANIM_TRIGGER_IDLE = "DynIdle";
    public const string ANIM_TRIGGER_RIFFLE_WALK = "RiffleWalk";
    public const string ANIM_TRIGGER_RIFFLE_IDLE = "RiffleIdle";
    public const string ANIM_PARAM_RUN_SPEED = "RunSpeed";
    public const string ANIM_TRIGGER_ATTACK = "Attack";
    public const string ANIM_TRIGGER_DEAD = "Death";
    #endregion

    #region TAGS
    public const string TAG_PLAYER = "Player";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_WALL = "Wall";
    #endregion
}
